<?xml version="1.0"?>
<package format="2">
  <name>mqtt_bridge</name>
  <version>0.1.6</version>
  <description>The mqtt_bridge package</description>

  <author email="junya.hayashi@groove-x.com">Junya Hayashi</author>
  <maintainer email="junya.hayashi@groove-x.com">Junya Hayashi</maintainer>

  <license>MIT</license>

  <url>http://www.ros.org/wiki/mqtt_bridge</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rosbridge_library</depend>
  <depend>std_msgs</depend>
  <depend>python-paho-mqtt-pip</depend>
  <depend>python-inject-pip</depend>
  <depend>python-pymongo</depend>

  <export>
  </export>
</package>
